--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,9 +8,12 @@ buildscript {
         kotlinVersion = "1.9.24"
     }
     repositories {
-        google()
-        mavenCentral()
+    google()
+    mavenCentral()
+    maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
+
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
